--- a/index.html
+++ b/index.html
@@ -65,6 +65,76 @@
                 <footer class="blockquote-footer fs-4">Someone famous in <cite title="Source Title">Source Title</cite></footer>
               </blockquote>
         </div>
+
+        <!-- Content -->
+        <div class="content container-fluid py-4">
+
+            <div class="content-1 bg-danger w-75">
+                <img class="img-fluid" src="./image-asset.jpeg" alt="">
+                <div class="row py-5">
+                    <div class="col">
+                        <h4 class="fw-semibold fs-3">ARTEM</h4>
+                    </div>
+                    <div class="col">
+                        <p class="fs-5">Posters and collateral for a limited run of my colleague’s one-man play, Artem. </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="content-1 bg-danger w-75">
+                <img class="img-fluid" src="./project-7.jpg" alt="">
+                <div class="row py-5">
+                    <div class="col">
+                        <h4 class="fw-semibold fs-3">ARTEM</h4>
+                    </div>
+                    <div class="col">
+                        <p class="fs-5">A clean and modern e-commerce site for local fashion label Marta. Optimized for mobile devices and selling on Instagram. Clothing by Lauren Winter and Ulihu. </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="content-2 bg-danger w-75">
+                <img class="img-fluid" src="./image-asset.jpeg" alt="">
+                <div class="row py-5">
+                    <div class="col">
+                        <h4 class="fw-semibold fs-3">MARTA</h4>
+                    </div>
+                    <div class="col">
+                        <p class="fs-5">An annual publication from the Circle gallery diving deep into the cyclical nature of cultural movements. </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="content-3 bg-danger w-75">
+                <img class="img-fluid" src="./image-asset.jpeg" alt="">
+                <div class="row py-5">
+                    <div class="col">
+                        <h4 class="fw-semibold fs-3">CIRCLE</h4>
+                    </div>
+                    <div class="col">
+                        <p class="fs-5">I’ve been involved with ethical accessories brand Touzery since the beginning, partnering on their branding, website and seasonal lookbooks. Bags by Cuero&Mør. </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="content-4 bg-danger w-75">
+                <img class="img-fluid" src="./image-asset.jpeg" alt="">
+                <div class="row py-5">
+                    <div class="col">
+                        <h4 class="fw-semibold fs-3">TOUZERY</h4>
+                    </div>
+                    <div class="col">
+                        <p class="fs-5">I’ve been involved with ethical accessories brand Touzery since the beginning, partnering on their branding, website and seasonal lookbooks. Bags by Cuero&Mør. </p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+        <!-- Footer -->
+        <footer class="footer container-fluid">
+            <p class="fs-6">MADE BY NUTHVIREAK <br><span>&#169</span>2022</p>
+        </footer>
         
     </div>
 
