--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
         <!-- Hero -->
         <div class="hero container-fluid py-4 d-flex align-items-center">
             <blockquote class="blockquote w-75">
-                <p class="mb-4 display-2 fw-semibold">Sandra Cami is a first-generation Vietnamese American designer. She is currently a principal designer at SQSP Studio in Montréal.</p>
-                <footer class="blockquote-footer fs-4">Someone famous in <cite title="Source Title">Source Title</cite></footer>
+                <p class="mb-4 display-2 fw-semibold">People think focus means saying yes to the thing you've got to focus on. It means saying no to the hundred other good ideas that there are. You have to pick carefully.</p>
+                <footer class="blockquote-footer fs-4 text-dark">Steve Job</footer>
               </blockquote>
         </div>
 
