--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
         <div class="content container-fluid py-4">
 
             <div class="content-1 bg-danger w-75">
-                <img class="img-fluid" src="./image-asset.jpeg" alt="">
+                <img class="img-fluid" src="./121shoppe.jpg" alt="">
                 <div class="row py-5">
                     <div class="col">
-                        <h4 class="fw-semibold fs-3">ARTEM</h4>
+                        <h4 class="fw-semibold fs-3">121 SHOPPE -- [UI]</h4>
                     </div>
                     <div class="col">
-                        <p class="fs-5">Posters and collateral for a limited run of my colleague’s one-man play, Artem. </p>
+                        <p class="fs-5">A new modern online market in Cambodia. User friendly, super quick and easy to use in online market, helps you Buy, Sell or Rent anything in your neighborhood. 121 Online Market Platform is the future of E-Commerce in Cambodia, aiming to make up for all inconveniences of other markets, and replace them with new modern solutions. </p>
                     </div>
                 </div>
             </div>
