--- a/index.html
+++ b/index.html
@@ -69,62 +69,30 @@
         <!-- Content -->
         <div class="content container-fluid py-4">
 
-            <div class="content-1 bg-danger w-75">
-                <img class="img-fluid" src="./121shoppe.jpg" alt="">
-                <div class="row py-5">
-                    <div class="col">
-                        <h4 class="fw-semibold fs-3">121 SHOPPE -- [UI]</h4>
-                    </div>
-                    <div class="col">
-                        <p class="fs-5">A new modern online market in Cambodia. User friendly, super quick and easy to use in online market, helps you Buy, Sell or Rent anything in your neighborhood. 121 Online Market Platform is the future of E-Commerce in Cambodia, aiming to make up for all inconveniences of other markets, and replace them with new modern solutions. </p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="content-1 bg-danger w-75">
-                <img class="img-fluid" src="./project-7.jpg" alt="">
-                <div class="row py-5">
-                    <div class="col">
-                        <h4 class="fw-semibold fs-3">ARTEM</h4>
-                    </div>
-                    <div class="col">
-                        <p class="fs-5">A clean and modern e-commerce site for local fashion label Marta. Optimized for mobile devices and selling on Instagram. Clothing by Lauren Winter and Ulihu. </p>
+            <div class="content-1 row pb-5">
+                <div class="col-12 col-lg-9">
+                    <img class="img-fluid" src="./121shoppe.jpg" alt="">
+                    <div class="row pt-3 pt-lg-5">
+                        <div class="col-12 col-lg-4">
+                            <h4 class="fw-semibold fs-3">121 SHOPPE -- [UI]</h4>
+                        </div>
+                        <div class="col">
+                            <p class="fs-5">A new modern online market in Cambodia. User friendly, super quick and easy to use in online market, helps you Buy, Sell or Rent anything in your neighborhood. 121 Online Market Platform is the future of E-Commerce in Cambodia, aiming to make up for all inconveniences of other markets, and replace them with new modern solutions. </p>
+                        </div>
                     </div>
                 </div>
             </div>
 
-            <div class="content-2 bg-danger w-75">
-                <img class="img-fluid" src="./image-asset.jpeg" alt="">
-                <div class="row py-5">
-                    <div class="col">
-                        <h4 class="fw-semibold fs-3">MARTA</h4>
-                    </div>
-                    <div class="col">
-                        <p class="fs-5">An annual publication from the Circle gallery diving deep into the cyclical nature of cultural movements. </p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="content-3 bg-danger w-75">
-                <img class="img-fluid" src="./image-asset.jpeg" alt="">
-                <div class="row py-5">
-                    <div class="col">
-                        <h4 class="fw-semibold fs-3">CIRCLE</h4>
-                    </div>
-                    <div class="col">
-                        <p class="fs-5">I’ve been involved with ethical accessories brand Touzery since the beginning, partnering on their branding, website and seasonal lookbooks. Bags by Cuero&Mør. </p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="content-4 bg-danger w-75">
-                <img class="img-fluid" src="./image-asset.jpeg" alt="">
-                <div class="row py-5">
-                    <div class="col">
-                        <h4 class="fw-semibold fs-3">TOUZERY</h4>
-                    </div>
-                    <div class="col">
-                        <p class="fs-5">I’ve been involved with ethical accessories brand Touzery since the beginning, partnering on their branding, website and seasonal lookbooks. Bags by Cuero&Mør. </p>
+            <div class="content-2 row pb-5">
+                <div class="col-12 col-lg-9">
+                    <img class="img-fluid" src="./project-7.jpg" alt="">
+                    <div class="row pt-3 pt-lg-5">
+                        <div class="col-12 col-lg-4">
+                            <h4 class="fw-semibold fs-3">121 SHOPPE -- [UI]</h4>
+                        </div>
+                        <div class="col">
+                            <p class="fs-5">A new modern online market in Cambodia. User friendly, super quick and easy to use in online market, helps you Buy, Sell or Rent anything in your neighborhood. 121 Online Market Platform is the future of E-Commerce in Cambodia, aiming to make up for all inconveniences of other markets, and replace them with new modern solutions. </p>
+                        </div>
                     </div>
                 </div>
             </div>
