--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </nav>
 
         <!-- Hero -->
-        <div class="hero container-fluid d-flex align-items-center my-md-5">
+        <div class="hero container-fluid d-flex align-items-center my-5">
             <blockquote class="blockquote w-75">
                 <p class="mb-4 display-2 fw-semibold">People think focus means saying yes to the thing you've got to focus on. It means saying no to the hundred other good ideas that there are. You have to pick carefully.</p>
                 <footer class="blockquote-footer fs-4 text-dark">Steve Job</footer>
