--- a/index.html
+++ b/index.html
@@ -138,6 +138,8 @@
             <p class="fs-6">MADE BY NUTHVIREAK <br><span>&#169</span>2022</p>
         </footer>
 
+        <div></div>
+
     </div>
 
 
